--- a/css/style.css
+++ b/css/style.css
@@ -203,22 +203,21 @@
 }
 
 .reen__logo {
-  position: relative;
   float: left;
 }
 
 .keyvisual {
   text-align: center;
   background-image: url(../img/main/keyvisual.jpg);
-  position: relative;
   background-size: contain;
+  padding: 300px 0 300px 0;
 }
 
 .made__for__designers {
   color: #FFF;
   font-size: 78px;
   text-align: center;
-  padding: 300px 0 20px 0;
+  padding: 0 0 20px 0;
 }
 
 .made__for__designers__sub {
@@ -234,7 +233,8 @@
 }
 
 .get__standard__now {
-  padding: 50px 0 300px;
+  padding: 50px 0 0 0;
+  position: relative;
 }
 
 .btn {
@@ -242,7 +242,7 @@
   border: 1px solid #00BC9C;
   border-radius: 5px;
   background-color: #00BC9C;
-  box-shadow: 2px 5px #00a085;
+  box-shadow: 2px 5px #00A085;
   color: #FFF;
   cursor: pointer;
   text-align: center;
@@ -250,7 +250,7 @@
   display: inline-block;
   text-decoration: none;
   position: absolute;
-  right: 41%;
+  right: 39%;
 }
 
 .btn:active {
@@ -421,6 +421,8 @@
 
 .get{
   padding-bottom: 200px;
+  text-align: center;
+  position: relative;
 }
 
 .footer {
@@ -456,7 +458,7 @@
 }
 
 .footer__content:last-child {
-  margin: 0px;
+  margin: 0;
 }
 
 .who__we__are__txt {
@@ -558,6 +560,10 @@
   padding: 8px;
 }
 
+form{
+  position: relative;
+}
+
 .btn3 {
   font-size: 10px;
   border: 1px solid #00BC9C;
@@ -569,8 +575,8 @@
   text-align: center;
   padding: 5px;
   position: absolute;
-  right: 212px;
-  top: 3429px;
+  right: 15%;
+  top: 2%;
 }
 
 .btn3:active {
